--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -9,6 +9,16 @@ pt-BR:
          edit: 'Editar perfil'
          location: "Localização: %{location}"
          bio: "Bio: %{bio}"
+
+   signup_mailer:
+      confirm_email:
+         subject: 'Colcho.net - Confirme seu email'
+         title: 'Seja bem vindo ao Colcho.net'
+         body: |
+            Seja bem vindo ao Colcho.net, %{full_name}.
+            O Colcho.net é o lugar ideal para você alugar aquele quarto sobrando na sua casa e ainda conhecer gente do mundo inteiro.
+         confirm_link_html: 'Para você começar a usar o site, acesse o link: %{link}'
+         thanks_html: 'Obrigado por se cadastrar no %{link}.'
    links:
       back: Voltar
 
