Email de confirmação de cadastro

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,5 +1,7 @@
 pt-BR:
    users:
+      confirmations:
+         success: Email confirmado com sucesso, obrigado!
       new:
          title: Cadastro
       edit:
