--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -3,6 +3,7 @@ pt-BR:
       notice:
          signed_in: Logado com sucesso
          signed_out: Logout efetuado com sucesso. Até logo!
+         room_created: Quarto adicionado com sucesso!
       alert:
          needs_login: 'Para continuar, você precisa estar logado'
    users:
@@ -74,3 +75,12 @@ pt-BR:
             submit:
                user_session:
                   create: 'Entrar'
+   dialogs:
+      destroy: 'Você tem certeza que quer remover?'
+   rooms:
+      index:
+         title: 'Quartos disponíveis'
+      room:
+         owner_html: '&mdash; %{owner} (%{owner})'
+         edit: 'Editar'
+         destroy: 'Remover'
